@@ -38,6 +38,9 @@
 <p>2020-03-07  Bob Friesenhahn  &lt;<a class="reference external" href="mailto:bfriesen&#37;&#52;&#48;simple&#46;dallas&#46;tx&#46;us">bfriesen<span>&#64;</span>simple<span>&#46;</span>dallas<span>&#46;</span>tx<span>&#46;</span>us</a>&gt;</p>
 <blockquote>
 <ul class="simple">
+<li>magick/resize.c (HorizontalFilter): Improve tracing.
+(VerticalFilter): Improve tracing.
+(ResizeImage): Improve tracing.</li>
 <li>www/api/api.rst: Add functions from log.c and render.c.</li>
 <li>magick/log.c (DestroyLogInfo): DestroyLogInfo is no longer
 marked MagickExport.</li>
